fix: styling of navbar & spacing of pages - made the navbar stand out when hovering (previously dim) - enhanced the styling and look of menu bar for mobile - enhanced the spacing of contents in the main page (for desktop)

--- a/src/app/navbar.css
+++ b/src/app/navbar.css
@@ -6,7 +6,7 @@
 
 /* Light mode - 3D drop shadow effect */
 .group:hover .neon {
-  filter: drop-shadow(2px 4px 8px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(2px 4px 8px rgba(0, 0, 0, 0.2));
 }
 
 /* Dark mode glow - bright white light spread out */
